new branch for live from web side (use MSE features to broadcast)

--- a/src/server/vod/vodconfig.json
+++ b/src/server/vod/vodconfig.json
@@ -1,6 +1,6 @@
 {
     "dirs": [
-        ""
+        "C:/Users/bmao002/Desktop/Projects/lvod/resources"
     ],
     "outputDir": "",
     "cmd": {
