change config to support relative path

--- a/src/server/vod/vodconfig.json
+++ b/src/server/vod/vodconfig.json
@@ -1,8 +1,8 @@
 {
     "dirs": [
-        ""
+        "resources"
     ],
-    "outputDir": "",
+    "outputDir": "resources",
     "cmd": {
         "ffmpeg": "ffmpeg",
         "mp4box": "MP4Box"
