live coding for web.

--- a/src/server/live/liveconfig.json
+++ b/src/server/live/liveconfig.json
@@ -7,6 +7,6 @@
     "ffmpegtrans": "-re -i ${input} -vf scale=640:trunc(640/a) -c:v libx264 -crf 23 -preset ultrafast -x264opts keyint=15:min-keyint=15:no-scenecut -maxrate 1M -bufsize 2M -c:a aac -f segment -segment_time 1 -segment_format mpegts ${outputPattern}",
     "mp4boxadd": "-add ${in} ${out}",
     "mp4boxpkg": "-dash-ctx ${dashCtx} -dash 1000 -ast-offset -no-frags-default -bs-switching no -min-buffer 40000 -url-template -time-shift 20 -segment-name ${prefix} -out ${dashFile} -dynamic -mpd-refresh 100000 ${input}",
-    "ffmpegtrans4web": "-r 15 -i ${input} -vf scale=640:trunc(640/a) -c:v libx264 -crf 23 -preset ultrafast -x264opts keyint=15:min-keyint=15:no-scenecut -maxrate 1M -bufsize 2M -f mp4 -movflags frag_keyframe+empty_moov ${outputPattern}",
-    "mp4boxpkg4web": "-dash-ctx ${dashCtx} -dash 5000 -ast-offset -no-frags-default -bs-switching no -min-buffer 40000 -url-template -time-shift 5 -segment-name ${prefix} -out ${dashFile} -dynamic -mpd-refresh 100000 ${input}"
+    "ffmpegtrans4web": "-r 15 -i ${input} -vf scale=640:trunc(640/a) -c:v libx264 -crf 23 -preset ultrafast -x264opts keyint=15:min-keyint=15:no-scenecut -maxrate 1M -bufsize 2M -f mp4 ${outputPattern}",
+    "mp4boxpkg4web": "-dash-ctx ${dashCtx} -dash 1000 -ast-offset -no-frags-default -bs-switching no -min-buffer -1 -url-template -time-shift 2000 -segment-name ${prefix} -out ${dashFile} -dynamic -mpd-refresh 100000 ${input}"
 }
